Apply the code style rules and the inspection profile