@@ -1,6 +1,7 @@
 package fr.lataverne.itemreward.managers;
 
 import com.google.gson.*;
+import fr.lataverne.itemreward.Helper;
 import fr.lataverne.itemreward.ItemReward;
 import fr.lataverne.itemreward.effects.*;
 import org.apache.commons.lang.NotImplementedException;
@@ -10,7 +11,6 @@ import org.bukkit.entity.Player;
 
 import java.io.IOException;
 import java.io.Reader;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -19,17 +19,7 @@ import java.util.HashMap;
 import java.util.Map;
 import java.util.UUID;
 
-import static fr.lataverne.itemreward.Helper.getStringInConfig;
-import static fr.lataverne.itemreward.Helper.sendBarMessage;
-
 public abstract class CustomEffect {
-    public enum ECustomEffect {
-        Fly,
-        Phantom,
-        Mining,
-        Creeper,
-        Swimming,
-    }
 
     private static final String customEffectPath = "plugins/ItemReward/customEffect/";
 
@@ -39,44 +29,38 @@ public abstract class CustomEffect {
 
     protected final UUID playerUUID;
 
-    protected int taskId = -1;
-
     protected boolean isStarted = false;
 
-    protected int remainingTime = 0;
+    protected int remainingTime;
+
+    protected int taskId = -1;
 
     protected CustomEffect(UUID playerUUID, int level) {
         this.playerUUID = playerUUID;
         this.level = level;
+        this.remainingTime = Helper.getIntInConfig(this.getConfigPath() + ".duration");
     }
 
     public static void addEffectInProgress(UUID uuid, CustomEffect customEffect) {
-        effectsInProgress.put(uuid, customEffect);
+        CustomEffect.effectsInProgress.put(uuid, customEffect);
     }
 
-    public static CustomEffect createCustomEffect(ECustomEffect eCustomEffect, UUID playerUUID, int level) throws NotImplementedException {
-        switch (eCustomEffect) {
-            case Fly:
-                return new FlyEffect(playerUUID, level);
-            case Phantom:
-                return new PhantomEffect(playerUUID);
-            case Mining:
-                return new MiningEffect(playerUUID);
-            case Creeper:
-                return new CreeperEffect(playerUUID);
-            case Swimming:
-                return new SwimmingEffect(playerUUID);
-            default:
-                throw new NotImplementedException("Not implemented: " + eCustomEffect);
-        }
+    public static CustomEffect createCustomEffect(ECustomEffect eCustomEffect, UUID playerUUID, int level) {
+        return switch (eCustomEffect) {
+            case Fly -> new FlyEffect(playerUUID, level);
+            case Phantom -> new PhantomEffect(playerUUID);
+            case Mining -> new MiningEffect(playerUUID);
+            case Creeper -> new CreeperEffect(playerUUID);
+            case Swimming -> new SwimmingEffect(playerUUID);
+        };
     }
 
     public static CustomEffect getCustomEffect(UUID uuid) {
-        return effectsInProgress.getOrDefault(uuid, null);
+        return CustomEffect.effectsInProgress.getOrDefault(uuid, null);
     }
 
     public static boolean hasEffectInProgress(UUID uuid) {
-        return effectsInProgress.containsKey(uuid);
+        return CustomEffect.effectsInProgress.containsKey(uuid);
     }
 
     public static void loadCustomEffect(UUID playerUUID) {
@@ -84,14 +68,14 @@ public abstract class CustomEffect {
             return;
         }
 
-        Path path = Paths.get(customEffectPath + playerUUID);
+        Path path = Paths.get(CustomEffect.customEffectPath + playerUUID);
 
         if (!Files.exists(path)) {
             return;
         }
 
         try {
-            Reader reader = Files.newBufferedReader(Paths.get(customEffectPath + playerUUID));
+            Reader reader = Files.newBufferedReader(Paths.get(CustomEffect.customEffectPath + playerUUID));
 
             JsonParser jsonParser = new JsonParser();
 
@@ -105,7 +89,7 @@ public abstract class CustomEffect {
             }
 
             for (Map.Entry<String, JsonElement> entry : json.entrySet()) {
-                if (entry.getKey().equals("dateTime")) {
+                if ("dateTime".equals(entry.getKey())) {
                     continue;
                 }
 
@@ -114,19 +98,20 @@ public abstract class CustomEffect {
 
                     JsonObject jsonObject = entry.getValue().getAsJsonObject();
 
-                    int level = 1;
-                    if (jsonObject.has("level")) {
-                        level = jsonObject.get("level").getAsInt();
-                    }
+                    int level = jsonObject.has("level")
+                                ? jsonObject.get("level").getAsInt()
+                                : 1;
 
-                    CustomEffect customEffect = createCustomEffect(eCustomEffect, playerUUID, level);
+                    CustomEffect customEffect = CustomEffect.createCustomEffect(eCustomEffect, playerUUID, level);
                     customEffect.remainingTime = jsonObject.get("remainingTime").getAsInt();
 
                     customEffect.start();
                 } catch (IllegalArgumentException e) {
-                    ItemReward.sendMessageToConsole(ChatColor.RED + "This custom potion does not exist (" + entry.getKey() + ")");
+                    ItemReward.sendMessageToConsole(
+                            ChatColor.RED + "This custom potion does not exist (" + entry.getKey() + ")");
                 } catch (NotImplementedException e) {
-                    ItemReward.sendMessageToConsole(ChatColor.RED + "This custom potion is not implemented (" + entry.getKey() + ")");
+                    ItemReward.sendMessageToConsole(
+                            ChatColor.RED + "This custom potion is not implemented (" + entry.getKey() + ")");
                 }
             }
         } catch (IOException e) {
@@ -139,7 +124,7 @@ public abstract class CustomEffect {
     }
 
     public static void removeEffectInProgress(UUID uuid) {
-        effectsInProgress.remove(uuid);
+        CustomEffect.effectsInProgress.remove(uuid);
     }
 
     public static void saveCustomEffect(UUID playerUUID) {
@@ -147,9 +132,9 @@ public abstract class CustomEffect {
             return;
         }
 
-        Path path = Paths.get(customEffectPath + playerUUID);
+        Path path = Paths.get(CustomEffect.customEffectPath + playerUUID);
 
-        if (!effectsInProgress.containsKey(playerUUID)) {
+        if (!CustomEffect.effectsInProgress.containsKey(playerUUID)) {
             if (Files.exists(path)) {
                 try {
                     Files.delete(path);
@@ -160,7 +145,7 @@ public abstract class CustomEffect {
             return;
         }
 
-        CustomEffect customEffect = effectsInProgress.get(playerUUID);
+        CustomEffect customEffect = CustomEffect.effectsInProgress.get(playerUUID);
 
         JsonObject json = new JsonObject();
 
@@ -177,15 +162,15 @@ public abstract class CustomEffect {
         try {
             Gson gson = new Gson();
 
-            if (!Files.exists(Paths.get(customEffectPath))) {
-                Files.createDirectory(Paths.get(customEffectPath));
+            if (!Files.exists(Paths.get(CustomEffect.customEffectPath))) {
+                Files.createDirectory(Paths.get(CustomEffect.customEffectPath));
             }
 
             if (!Files.exists(path)) {
                 Files.createFile(path);
             }
 
-            Files.write(path, gson.toJson(json).getBytes(StandardCharsets.UTF_8));
+            Files.writeString(path, gson.toJson(json));
         } catch (IOException e) {
             ItemReward.sendMessageToConsole(ChatColor.RED + "Write file error");
             ItemReward.sendMessageToConsole(ChatColor.RED + e.getMessage());
@@ -195,7 +180,7 @@ public abstract class CustomEffect {
         Bukkit.getScheduler().cancelTask(customEffect.taskId);
         customEffect.taskId = -1;
 
-        effectsInProgress.remove(playerUUID);
+        CustomEffect.effectsInProgress.remove(playerUUID);
     }
 
     public void start() {
@@ -209,7 +194,8 @@ public abstract class CustomEffect {
             return;
         }
 
-        this.taskId = Bukkit.getScheduler().scheduleSyncRepeatingTask(ItemReward.getInstance(), this.getRepeatingTask(), 0, 20);
+        this.taskId = Bukkit.getScheduler()
+                            .scheduleSyncRepeatingTask(ItemReward.getInstance(), this::getRepeatingTask, 0, 20);
 
         if (this.taskId == -1) {
             this.stop();
@@ -234,16 +220,20 @@ public abstract class CustomEffect {
 
         CustomEffect.removeEffectInProgress(player.getUniqueId());
 
-        sendBarMessage(player, getStringInConfig("message.user.customPotionEffectFinished", false));
+        Helper.sendBarMessage(player, Helper.getStringInConfig("message.user.customPotionEffectFinished", false));
 
         this.isStarted = false;
     }
 
-    @SuppressWarnings ("unused")
+    @Override
+    public String toString() {
+        return "CustomEffect{" + "level=" + this.level + ", playerUUID=" + this.playerUUID + ", isStarted=" +
+               this.isStarted + ", remainingTime=" + this.remainingTime + ", taskId=" + this.taskId + "}";
+    }
+
     protected abstract String getConfigPath();
 
-    @SuppressWarnings ("unused")
     protected abstract ECustomEffect getCustomEffectType();
 
-    protected abstract Runnable getRepeatingTask();
+    protected abstract void getRepeatingTask();
 }
